quickhelp Nook 수정 3차

--- a/css/global.css
+++ b/css/global.css
@@ -323,6 +323,7 @@ div>div:last-of-type>span>a,
 .helpPressContentCotainer p,
 .helpPressContentCotainer li,
 .helpPressContentCotainer span,
+.quickHelpdeviceContainer>div:last-child,
 .covidContainer p,
 .covidContainer>div:not(:last-of-type)>ul>li,
 .storePickUpContainer>div:nth-child(2)>div>p,
